welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: not found: value GetX
    setPos((GetX()+1)%getMondeLargeur(), (GetY()+1)%getMondeHauteur())
            ^ColumnByColumn:5: error: not found: value GetY
    setPos((GetX()+1)%getMondeLargeur(), (GetY()+1)%getMondeHauteur())
                                          ^